--- a/kiley-wilhelm.html
+++ b/kiley-wilhelm.html
@@ -1,195 +1,67 @@
-<!-- ============================= -->
-<!-- MAP BRAND STYLE (GLOBAL) -->
-<!-- ============================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Kiley Wilhelm — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
+  body { margin:0; background:#f5f7fb; font-family:'Montserrat', sans-serif;}
+  .prospect-page { max-width:960px; margin:0 auto 3rem auto; padding:1.5rem 1rem; color:#1a1a1a;}
+  .prospect-hero { display:flex; flex-wrap:wrap; justify-content:space-between; gap:1.25rem; padding:1.75rem 1.25rem; border-radius:14px; background:#2E5084; color:#fff; margin-bottom:2rem;}
+  .prospect-name { font-family:'Archivo Black'; font-size:2rem; letter-spacing:.02em; margin:0 0 .25rem; text-transform:uppercase;}
+  .prospect-tagline { margin:0 0 .15rem; font-size:1rem; font-weight:600;}
+  .prospect-subtitle {margin:0; font-size:.9rem; opacity:.9;}
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  .prospect-grade-card { min-width:200px; padding:1rem 1.25rem; border-radius:12px; background:rgba(255,255,255,.15); border:1px solid rgba(255,255,255,.35); backdrop-filter:blur(4px);}
+  .grade-label{ font-size:.7rem; opacity:.8; text-transform:uppercase;}
+  .grade-score{ font-family:'Archivo Black'; font-size:2.2rem; margin:.15rem 0;}
+  .grade-tier{ font-size:.9rem; font-weight:600;}
+  .grade-note{ font-size:.75rem; opacity:.9;}
+  .recommendation-pill{ display:inline-flex; align-items:center; gap:5px; background:#fff; color:#2E5084; padding:4px 10px; border:1px solid #dce2ee; border-radius:30px; font-weight:600; font-size:.78rem; margin-top:.55rem; width:fit-content;}
+  .pill-box{width:12px;height:12px;border-radius:3px;}
+  .pill-green{background:#22c55e;}
 
-  .prospect-hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  .prospect-meta{display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column{flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title{font-family:'Archivo Black';font-size:.9rem;color:#2E5084;text-transform:uppercase;margin:0 0 .7rem;}
+  .meta-list{list-style:none;padding:0;margin:0;}
+  .meta-list li{display:flex;justify-content:space-between;padding:.28rem 0;border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value{text-align:right;margin-left:1rem;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
-
-  .prospect-tagline {
-    margin: 0 0 0.15rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
-
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
-
-  .prospect-grade-card {
-    min-width: 180px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    margin: 0;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
-  }
-
-  @media (max-width: 640px) {
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
+  .prospect-section{background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title{font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body{font-size:.9rem;line-height:1.52;}
+  .section-list{font-size:.9rem;line-height:1.52;padding-left:1.2rem;} .section-list li{margin-bottom:.38rem;}
 </style>
+</head>
 
+<body>
 <div class="prospect-page">
 
-  <!-- ============================= -->
-  <!-- HERO -->
-  <!-- ============================= -->
   <section class="prospect-hero">
-    <div class="prospect-hero-main">
+    <div>
       <h1 class="prospect-name">KILEY WILHELM</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ Prospect · Team Captain · Investment Banking Track</p>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ Prospect · Podium Sweep · Investment Banking Track</p>
       <p class="prospect-subtitle">Harvard University · Swimming & Diving 🏊‍♀️ · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
       <div class="grade-score">95</div>
-      <div class="grade-tier">Round 1–2 Candidate</div>
-      <div class="grade-note">High-floor, high-discipline performer</div>
+      <div class="grade-tier">Round 1 Candidate</div>
+      <div class="grade-note">Olympic-caliber poise, discipline, and execution</div>
+
+      <div class="recommendation-pill">
+        <div class="pill-box pill-green"></div>
+        <div class="pill-box pill-green"></div>
+        <div class="pill-box pill-green"></div>
+        <span>Top Recommendation</span>
+      </div>
     </div>
   </section>
 
-  <!-- ============================= -->
-  <!-- META -->
-  <!-- ============================= -->
   <section class="prospect-meta">
-    <!-- PROSPECT INFO -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
@@ -197,99 +69,67 @@
         <li><span>Major</span><span class="meta-value">Applied Mathematics</span></li>
         <li><span>Minor</span><span class="meta-value">Economics</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
-        <li><span>GPA</span><span class="meta-value">3.95</span></li>
-        <li><span>Sport</span><span class="meta-value">Swimming & Diving 🏊‍♀️</span></li>
+        <li><span>GGPA</span><span class="meta-value">3.95</span></li>
+        <li><span>Sport</span><span class="meta-value">Swimming & Diving</span></li>
         <li><span>Hometown</span><span class="meta-value">Charlotte, NC</span></li>
       </ul>
     </div>
 
-    <!-- MAP PROFILE -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Official Points</span><span class="meta-value">1649.5</span></li>
-        <li><span>Cumulative Rank</span><span class="meta-value">5 / 63</span></li>
-        <li><span>Phase 1 Rank</span><span class="meta-value">10 / 63</span></li>
-        <li><span>Phase 2 Rank</span><span class="meta-value">5 / 30</span></li>
-        <li>
-          <span>Personality</span>
-          <span class="meta-value">
-            10. Podium Sweep<br>
-            (Relentless Competitor · High Standards · Results-Driven)
-          </span>
-        </li>
-        <li>
-          <span>Leadership</span>
-          <span class="meta-value">
-            Bureaucratic Leader · 1 of 6 Captains<br>
-            (Process-Oriented · Detail-Driven · High Accountability)
-          </span>
-        </li>
+        <li><span>Fellowship Rank</span><span class="meta-value">5 / 78</span></li>
+        <li><span>Interview #1</span><span class="meta-value">90.6%</span></li>
+        <li><span>Interview #2</span><span class="meta-value">96.6%</span></li>
+        <li><span>Interview #3</span><span class="meta-value">90.1%</span></li>
+        <li><span>Personality</span><span class="meta-value">Podium Sweep (Competitive, Disciplined)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Bureaucratic (Process-Driven, Consistent)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Cooperative (Inclusive, Team-First)</span></li>
       </ul>
     </div>
   </section>
 
-  <!-- ============================= -->
-  <!-- OVERVIEW -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      Kiley is one of the most mature and self-directed prospects in the entire Diamond League class — and the 
-      only athlete whose professionalism is shaped by a gap year spent training to qualify for the U.S. Olympic 
-      Swim Trials. That experience shows up everywhere: poise under pressure, emotional steadiness, and an 
-      uncommon ability to regulate herself when stakes rise.
+      Kiley is one of the most mature and self-directed prospects in the entire Diamond League class — and the only athlete whose professionalism is shaped by a gap year spent training to qualify for the U.S. Olympic Swim Trials. That experience shows up everywhere: poise under pressure, emotional steadiness, and an uncommon ability to regulate herself when stakes rise.
       <br><br>
-      A top-10 finisher who completed every optional Extra Rep assignment, Kiley embodies the Podium Sweep archetype 
-      at its highest level — disciplined, composed, and grounded in preparation. She leads with quiet confidence and 
-      sets a culture standard through consistency rather than volume.
+      A top-10 finisher who completed every optional Extra Rep assignment, Kiley embodies the Podium Sweep archetype at its highest level — disciplined, composed, and grounded in preparation. She leads with quiet confidence and sets a culture standard through consistency rather than volume.
       <br><br>
-      Her one meaningful growth area is communication pace. Kiley tends to take a few days to respond over email or 
-      regroup after feedback — a sign of her thoughtful, internal processor style. While this reflects care and 
-      intentionality, it also means she trails the more rapid-response captains in real-time communication. Framed 
-      positively: when she does respond, the quality is exceptionally high.
+      Her one meaningful growth area is communication pace. Kiley tends to take a few days to respond over email or regroup after feedback — a sign of her thoughtful, internal processor style. While this reflects care and intentionality, it also means she trails the more rapid-response captains in real-time communication. Framed positively: when she does respond, the quality is exceptionally high.
     </p>
   </section>
 
-  <!-- ============================= -->
-  <!-- STRENGTHS -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Mature presence:</strong> Gap year training for the Olympic Swim Trials shows up in poise and pressure management.</li>
-      <li><strong>Elite reliability:</strong> Completed every assignment and all Extra Reps — extremely rare signal of discipline.</li>
-      <li><strong>Academic horsepower:</strong> Applied Mathematics + Economics + 3.95 GPA.</li>
-      <li><strong>Composed communicator:</strong> Uses pauses and structured thinking to deliver clear, concise answers.</li>
-      <li><strong>High coachability:</strong> Quickly absorbs MAP frameworks and applies them with precision.</li>
-      <li><strong>Self-awareness:</strong> Has one of the strongest self-assessment profiles in the program.</li>
-      <li><strong>Professional demeanor:</strong> Calm, grounded, and mature beyond her age.</li>
+      <li>Mature presence: Gap year Olympic Swim Trials training creates elite poise under pressure.</li>
+      <li>Elite reliability: Completed every assignment + all Extra Reps — extremely rare.</li>
+      <li>Academic horsepower: Applied Mathematics + Economics + 3.95 GPA.</li>
+      <li>Composed communicator: Structured thinking, clear delivery, patient pacing.</li>
+      <li>High coachability: Quickly internalizes MAP frameworks with precision.</li>
+      <li>Self-awareness: One of the strongest reflection profiles in the program.</li>
+      <li>Professional demeanor: Calm, grounded, and emotionally steady.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
-  <!-- AREAS FOR DEVELOPMENT -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
-      <li>Communication speed — tends to take longer to respond or bounce back after feedback; quality is high but pace lags peers.</li>
-      <li>Prefers structure — more practice in messy, ambiguous case settings will accelerate growth.</li>
-      <li>Behavioral storytelling — adding warmth and narrative depth will elevate her already strong communication.</li>
+      <li>Communication speed — increase response time & follow-up pace.</li>
+      <li>More reps in messy problem spaces to strengthen ambiguity tolerance.</li>
+      <li>Add narrative warmth & story arc to elevate behavioral interviews.</li>
     </ul>
   </section>
 
-  <!-- ============================= -->
-  <!-- PROJECTION -->
-  <!-- ============================= -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A clear Round 1–2 MAP prospect with exceptional discipline, maturity, and academic strength. Kiley’s 
-      Olympic-caliber poise, reliability, and analytical foundation give her a high floor from day one. With 
-      continued emphasis on communication pace and narrative depth, she projects as a standout analyst in 
-      competitive 2027 pipelines — and one of the most mature leaders in the Diamond League cohort.
+      A clear Round 1–2 MAP prospect with exceptional discipline, maturity, and academic strength. Kiley’s Olympic-caliber poise, reliability, and analytical foundation create a high floor from day one. With continued development in communication pace and narrative depth, she projects as a standout analyst in competitive 2027 pipelines — and one of the most mature leaders in the Diamond League cohort.
     </p>
   </section>
 
 </div>
+</body>
+</html>
+
