--- a/ella-miller.html
+++ b/ella-miller.html
@@ -7,267 +7,133 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  .prospect-page{max-width:960px;margin:0 auto 2.5rem;font-family:'Montserrat',sans-serif;color:#1a1a1a;}
+  .prospect-hero{display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;padding:1.5rem 1.25rem;border-radius:12px;background:#2E5084;color:#fff;margin-bottom:1.5rem;}
+  .prospect-name{font-family:'Archivo Black',sans-serif;font-size:1.85rem;margin:0 0 .25rem;text-transform:uppercase;letter-spacing:.02em;}
+  .prospect-tagline{margin:0 0 .15rem;font-size:.95rem;font-weight:600;}
+  .prospect-subtitle{margin:0;font-size:.85rem;opacity:.9;}
+  .prospect-grade-card{min-width:180px;padding:.75rem 1rem;border-radius:10px;background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.3);backdrop-filter:blur(4px);}
+  .grade-label{font-size:.7rem;text-transform:uppercase;opacity:.8;margin-bottom:.25rem;}
+  .grade-score{font-family:'Archivo Black',sans-serif;font-size:1.9rem;margin-bottom:.1rem;}
+  .grade-tier{font-size:.8rem;font-weight:600;}
+  .grade-pill{margin-top:.35rem;font-size:.75rem;padding:.25rem .55rem;border-radius:6px;background:#F8C93B;color:#000;font-weight:600;display:inline-block;}
 
-  .prospect-hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  .prospect-meta{display:flex;flex-wrap:wrap;gap:1rem;margin-bottom:1.5rem;}
+  .meta-column{flex:1 1 260px;background:#fff;border-radius:10px;padding:1rem 1.1rem;border:1px solid #dce2ee;}
+  .meta-title{font-family:'Archivo Black',sans-serif;font-size:.85rem;text-transform:uppercase;letter-spacing:.07em;color:#2E5084;margin:0 0 .6rem;}
+  .meta-list{list-style:none;padding:0;margin:0;}
+  .meta-list li{display:flex;justify-content:space-between;padding:.2rem 0;border-bottom:1px dotted #e5e8f1;font-size:.85rem;}
+  .meta-value{text-align:right;margin-left:1rem;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
+  .prospect-section{margin-bottom:1.25rem;padding:1rem 1.1rem;border-radius:10px;border:1px solid #dce2ee;background:#fff;}
+  .section-title{font-family:'Archivo Black',sans-serif;font-size:.9rem;text-transform:uppercase;color:#2E5084;margin:0 0 .6rem;}
+  .section-body{font-size:.88rem;line-height:1.48;}
+  .section-list{padding-left:1.1rem;margin:0;font-size:.88rem;line-height:1.48;}
+  .section-list li{margin-bottom:.35rem;}
 
-  .prospect-tagline {
-    margin: 0 0 0.15rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
-
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
-
-  .prospect-grade-card {
-    min-width: 180px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    margin: 0;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
+  @media(max-width:640px){
+    .meta-list li{flex-direction:column;align-items:flex-start;}
+    .meta-value{text-align:left;margin-left:0;margin-top:.1rem;}
   }
 </style>
-
 </head>
-<body>
 
+<body>
 <div class="prospect-page">
 
-  <!-- HERO -->
-  <section class="prospect-hero">
-    <div class="prospect-hero-main">
-      <h1 class="prospect-name">ELLA MILLER</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Hustler Archetype · Investment Banking Track</p>
-      <p class="prospect-subtitle">Amherst College · Squash 🥅 · Class of 2028</p>
-    </div>
+<!-- HERO -->
+<section class="prospect-hero">
+  <div>
+    <h1 class="prospect-name">ELLA MILLER</h1>
+    <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ Prospect · Squash · Investment Banking Track</p>
+    <p class="prospect-subtitle">Amherst College · Class of 2028</p>
+  </div>
 
-    <div class="prospect-grade-card">
-      <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">93</div>
-      <div class="grade-tier">Round 1–2 Candidate</div>
-      <div class="grade-note">High-character, reliable, and strong behavioral upside</div>
-    </div>
-  </section>
+  <div class="prospect-grade-card">
+    <div class="grade-label">MAP Prospect Grade</div>
+    <div class="grade-score">93</div>
+    <div class="grade-tier">Round 1–2 Candidate</div>
+    <div class="grade-pill">🟨🟨🟨 Strong Recommendation</div>
+  </div>
+</section>
 
-  <!-- META -->
-  <section class="prospect-meta">
+<!-- META -->
+<section class="prospect-meta">
 
-    <!-- Prospect Info -->
-    <div class="meta-column">
-      <h2 class="meta-title">Prospect Info</h2>
-      <ul class="meta-list">
-        <li><span>College</span><span class="meta-value">Amherst College</span></li>
-        <li><span>Major</span><span class="meta-value">American Studies</span></li>
-        <li><span>Minor</span><span class="meta-value">N/A</span></li>
-        <li><span>Year</span><span class="meta-value">2028</span></li>
-        <li><span>GPA</span><span class="meta-value">3.92</span></li>
-        <li><span>Sport</span><span class="meta-value">Squash</span></li>
-        <li><span>Hometown</span><span class="meta-value">Greenwich, CT</span></li>
-      </ul>
-    </div>
-
-    <!-- MAP Profile -->
-    <div class="meta-column">
-      <h2 class="meta-title">MAP Profile</h2>
-      <ul class="meta-list">
-        <li><span>Official Points</span><span class="meta-value">1413</span></li>
-        <li><span>Cumulative Rank</span><span class="meta-value">7 / 63</span></li>
-        <li><span>Phase 1 Rank</span><span class="meta-value">23 / 63</span></li>
-        <li><span>Phase 2 Rank</span><span class="meta-value">7 / 30</span></li>
-        <li>
-          <span>Personality</span>
-          <span class="meta-value">
-            6. Hustler<br>
-            (Creative Problem-Solving Personality · Initiative · Unwavering Self-Belief)
-          </span>
-        </li>
-        <li>
-          <span>Leadership</span>
-          <span class="meta-value">
-            Democratic Leader<br>
-            (Collaborative Decision-Making · Team Input · Shared Ownership)
-          </span>
-        </li>
-      </ul>
-    </div>
-
-  </section>
-
-  <!-- OVERVIEW -->
-  <section class="prospect-section">
-    <h2 class="section-title">Overview</h2>
-    <p class="section-body">
-      A polished, high-character Hustler prospect with elite academic consistency and standout behavioral upside.
-      Ella pairs a 3.92 GPA with a high-performance squash background — competing as a top-25 nationally ranked
-      junior player, top-49 globally, and now a starter on a top-13 collegiate team. Her work ethic is evident in
-      both her academic and athletic commitments, consistently taking extra reps and showing strong initiative.
-      <br><br>
-      In the MAP environment, Ella presents as dependable, engaged, thoughtful, and growth-oriented — a direct match
-      for her Hustler personality profile. With continued technical development, she has early-round behavioral
-      interview potential and meaningful long-term upside across investment banking pipelines.
-    </p>
-  </section>
-
-  <!-- STRENGTHS -->
-  <section class="prospect-section">
-    <h2 class="section-title">Strengths</h2>
-    <ul class="section-list">
-      <li><strong>Hustler motor:</strong> High-initiative profile; consistently seeks extra academic and athletic reps.</li>
-      <li><strong>Elite discipline:</strong> Top-ranked squash résumé with rigorous training habits beyond team requirements.</li>
-      <li><strong>Academic excellence:</strong> 3.92 GPA with comparative economics experience at LSE.</li>
-      <li><strong>Strong communication:</strong> Clear, thoughtful, well-prepared verbal responses.</li>
-      <li><strong>Early finance exposure:</strong> IB internship at William Hood & Company with hands-on modeling and CIM experience.</li>
-      <li><strong>Leadership maturity:</strong> Former captain, SAAC representative, and health/wellness instructor.</li>
+  <div class="meta-column">
+    <h2 class="meta-title">Prospect Info</h2>
+    <ul class="meta-list">
+      <li><span>School</span><span class="meta-value">Amherst College</span></li>
+      <li><span>Year</span><span class="meta-value">2028</span></li>
+      <li><span>GPA</span><span class="meta-value">3.92</span></li>
+      <li><span>Sport</span><span class="meta-value">Squash</span></li>
+      <li><span>Hometown</span><span class="meta-value">Greenwich, CT</span></li>
     </ul>
-  </section>
+  </div>
 
-  <!-- AREAS FOR DEVELOPMENT -->
-  <section class="prospect-section">
-    <h2 class="section-title">Areas for Development</h2>
-    <ul class="section-list">
-      <li>Continue strengthening technical fundamentals (valuation, comps, modeling fluency).</li>
-      <li>Increase confidence in high-speed case discussions to match behavioral strengths.</li>
-      <li>Sharpen concise delivery in timed interview settings.</li>
+  <div class="meta-column">
+    <h2 class="meta-title">MAP Profile</h2>
+    <ul class="meta-list">
+      <li><span>Fellowship Rank</span><span class="meta-value">7 / 63</span></li>
+      <li><span>Interview #1</span><span class="meta-value">95.3%</span></li>
+      <li><span>Interview #2</span><span class="meta-value">99.5%</span></li>
+      <li><span>Interview #3</span><span class="meta-value">74.8%</span></li>
+      <li><span>Personality</span><span class="meta-value">Hustler (Driven · Proactive)</span></li>
+      <li><span>Leadership</span><span class="meta-value">Servant Leader (Empathetic · Supportive)</span></li>
+      <li><span>Teamwork</span><span class="meta-value">Detail-Oriented (Structured · Methodical)</span></li>
     </ul>
-  </section>
+  </div>
 
-  <!-- PROJECTION -->
-  <section class="prospect-section">
-    <h2 class="section-title">Projection</h2>
-    <p class="section-body">
-      A strong Round 1–2 MAP prospect with clear upside as her technical foundation deepens.
-      Ella offers reliability, discipline, maturity, and elite behavioral poise — projecting as a highly coachable,
-      high-character candidate who will strengthen any analyst class from day one.
-    </p>
-  </section>
+</section>
+
+<!-- OVERVIEW -->
+<section class="prospect-section">
+  <h2 class="section-title">Overview</h2>
+  <p class="section-body">
+    A polished, high-character Hustler prospect with elite academic consistency and standout behavioral upside. 
+    Ella pairs a 3.92 GPA with a high-performance squash background — competing as a top-25 nationally ranked junior player, 
+    top-49 globally, and now a starter on a top-13 collegiate team. Her work ethic is evident in both her academic 
+    and athletic commitments, consistently taking extra reps and showing strong initiative.
+    <br><br>
+    In the MAP environment, Ella presents as dependable, engaged, thoughtful, and growth-oriented — fully reflecting 
+    the Hustler profile. With continued technical development, she has early-round behavioral interview potential 
+    and meaningful long-term upside across investment banking pipelines.
+  </p>
+</section>
+
+<!-- STRENGTHS -->
+<section class="prospect-section">
+  <h2 class="section-title">Strengths</h2>
+  <ul class="section-list">
+    <li>Hustler motor with proactive initiative and strong accountability.</li>
+    <li>Elite discipline and nationally-ranked squash background.</li>
+    <li>Academic excellence: 3.92 GPA and comparative economics at LSE.</li>
+    <li>Strong communicator — poised, clear, and well-prepared.</li>
+    <li>Finance exposure: IB internship at William Hood; CIM + modeling experience.</li>
+    <li>Leadership maturity as SAAC representative and wellness instructor.</li>
+  </ul>
+</section>
+
+<!-- AREAS FOR DEVELOPMENT -->
+<section class="prospect-section">
+  <h2 class="section-title">Areas for Development</h2>
+  <ul class="section-list">
+    <li>Continue strengthening valuation and modeling fluency.</li>
+    <li>Increase confidence in high-speed interview discussion.</li>
+    <li>Sharpen concise delivery in timed answers.</li>
+  </ul>
+</section>
+
+<!-- PROJECTION -->
+<section class="prospect-section">
+  <h2 class="section-title">Projection</h2>
+  <p class="section-body">
+    A strong Round 1–2 MAP prospect with the discipline, maturity, and communication foundation to succeed in 
+    competitive recruiting. As technical fundamentals deepen, Ella projects as a poised, reliable analyst 
+    who will strengthen any deal team from day one.
+  </p>
+</section>
 
 </div>
-
 </body>
 </html>
